GNOME Bugzilla – Bug 680969
Error message is shown when switching to 1366x768 mirror mode
Last modified: 2012-08-07 14:38:42 UTC
Created attachment 220048 [details] error dialog screenshot Connect HDMI or D-sub to external monitor, and it works fine when switching to mirror mode in 1024x768, but does not work for mirror mode in 1366x768. Please see the attached screenshot and `xrandr -q` output. Step: 1. Connect external monitor using HDMI or D-sub 2. Use Display settings to switch to mirror mode, and select 1366x768 for resolution 3. Error dialog window pops up
Created attachment 220049 [details] xrandr -q
1366x768 is added by the second add_mode in rebuild_resolution_combo() in cc-display-panel.c: for (i = 0; modes[i] != NULL; ++i) add_mode (self, modes[i], output_width, output_height, preferred_id); /* And force the preferred mode in the drop-down */ add_mode (self, mode, output_width, output_height, preferred_id);
Use preferred resolution to switch to mirror mode will popup error messages if preferred resolution is not a common resolution. In this case, the mode list of clone mode should be 1360x768, 1024x768, 800x600 (HDMI1 and LVDS1 both supported modes) The original logic will force add the preferred mode (1366x768) to the mode list but 1366x768 doesn't exist in xrandr mode list of external monitor.
Created attachment 220510 [details] [review] do not add preferred mode to drop-down when in mirror mode
Pushed with a few coding style changes, thanks for tracking this down.