display: Do not add preferred mode to drop down in clone mode.

Use preferred resolution to switch to mirror mode will popup error
messages if preferred resolution is not a common resolution.

https://bugzilla.gnome.org/show_bug.cgi?id=680969